--- a/public/css/opinion.css
+++ b/public/css/opinion.css
@@ -240,8 +240,8 @@ hr {
     font-size: 14px;
     color: #666;
     margin-bottom: 20px;
-    margin-left: 8%;
-    margin-right: 8%;
+    margin-left: 12;
+    margin-right: 12%;
 }
 
 .author-profile {
