--- a/public/css/index.css
+++ b/public/css/index.css
@@ -804,3 +804,37 @@ h4 {
     margin-bottom: 15px;
     margin-top: 0;
 }
+
+/* Published Pages Section Heading */
+.published-pages h3 {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    color: #262626;
+}
+
+/* Style for Links in Published Pages Section */
+.published-pages ul {
+    list-style: none;
+    padding: 0;
+}
+
+.published-pages li {
+    margin: 15px 0;
+    text-align: center;
+}
+
+.published-pages li a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #333;
+    padding: 10px 15px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    transition: color 0.3s, border-color 0.3s, background-color 0.3s;
+}
+
+.published-pages li a:hover {
+    color: #7277cf;
+    text-decoration:underline;
+}
